versioned_docs/version-4.2.0/发布说明/4.2.0发布说明.md

import useBaseUrl from '@docusaurus/useBaseUrl';

发布时间：2022-02-27

## 增加的功能

1. [PBIN3762：终端字符串和整形输入的地方支持语音转文本录入](#pbin3762终端字符串和整形输入的地方支持语音转文本录入)
1. [PBIN3876：打印页面支持自定义](#pbin3876打印页面支持自定义)
1. [PBIN3881：项目每个活动完成时，显示项目属性，对于必填项要求填写才能完成](#pbin3881项目每个活动完成时显示项目属性对于必填项要求填写才能完成)
1. [PBIN3883：内置自定义KPI支持作业、作业项和维度来源](#pbin3883内置自定义kpi支持作业作业项和维度来源)
1. [PBIN3903：终端和Web端内置库操作自定义属性支持各种配置](#pbin3903终端和web端内置库操作自定义属性支持各种配置)
1. [PBIN3913：作业组Word和Excel视图支持显示列表的全部项](#pbin3913作业组word和excel视图支持显示列表的全部项)
1. [PBIN3932：终端旧样式主页和新样式执行列表页扫描后，如果选中未接受的作业组，跳转到当前作业组并选中](#pbin3932终端旧样式主页和新样式执行列表页扫描后如果选中未接受的作业组跳转到当前作业组并选中)
1. [PBIN4004：项目甘特图上显示实际开始时间和预计结束时间标记](#pbin4004项目甘特图上显示实际开始时间和预计结束时间标记)
1. [PBIN4011：资产总览Tab页支持扩展](#pbin4011资产总览tab页支持扩展)
1. [PBIN4025：作业项（历史）报表支持没有选择项](#pbin4025作业项历史报表支持没有选择项)
1. [PBIN4088：库存功能完善](#pbin4088库存功能完善)
1. [PBIN4120：对象资质过期天数可发布Mqtt消息](#pbin4120对象资质过期天数可发布mqtt消息)
1. [PBIN4125：增加发布Mqtt消息的接口和流程后内置函数](#pbin4125增加发布mqtt消息的接口和流程后内置函数)
1. [PBIN4145：终端和网页端部分细节完善](#pbin4145终端和网页端部分细节完善)
1. [PBIN4148：手机端相机扫描支持打开闪光灯](#pbin4148手机端相机扫描支持打开闪光灯)
1. [PBIN4154：手机端拍照支持增加水印（安卓版本）](#pbin4154手机端拍照支持增加水印安卓版本)
1. [PBIN4179：支持把用户设置为超级管理员](#pbin4179支持把用户设置为超级管理员)
1. [PBIN4184：终端待执行和执行中也可以按时间、分组名排序](#pbin4184终端待执行和执行中也可以按时间分组名排序)
1. [PBIN4199：资产内部属性支持报警和逻辑](#pbin4199资产内部属性支持报警和逻辑)
1. [PBIN4252：imFigure功能增强](#pbin4252imfigure功能增强)
1. [PBIN4257：KPI增加列表维度，以方便自定义KPI使用](#pbin4257kpi增加列表维度以方便自定义kpi使用)
1. [PBIN4267：Restful API增加接口和支持Swagger](#pbin4267restful-api增加接口和支持swagger)
1. [PBIN4269：统一的Web配置和管理中心](#pbin4269统一的web配置和管理中心)
1. [PBIN4303：改进终端在线时消息推送方式](#pbin4303改进终端在线时消息推送方式)
1. [PBIN4317：授权增加对软件版本的控制](#pbin4317授权增加对软件版本的控制)
1. [PBIN4320：外部数据源服务初始化时自动注册需要的OPC组件](#pbin4320外部数据源服务初始化时自动注册需要的opc组件)
1. [PBIN4356：作业组模板支持只能单次计划的设置](#pbin4356作业组模板支持只能单次计划的设置)
1. [PBIN4397：KPI增加作业组完成率和支持导出为图片](#pbin4397kpi增加作业组完成率和支持导出为图片)
1. [PBIN4423：EOC报表导出支持列为图片文件类型](#pbin4423eoc报表导出支持列为图片文件类型)

## 修复的问题

1. BugN3892：EOC库存表库操作，入库增加项信息会提示“项信息重复”
1. BugN3895：EOC计划中作业组属性为库操作，通过导入时，不显示其它相关属性值
1. BugN3896：终端JSON类型作业项后插会触发下一步
1. BugN3900：使用脚本更新作业组属性值，列表类型的属性不会实时显示更新
1. BugN3905：在有些终端设备上图片预览不正确
1. BugN3947：EOC的资产属性为文件类型，值为字符串，会导致页面一直显示加载中
1. BugN3991：网页端资产和用户页面权限控制不正确
1. BugN4023：当启用记录访问日志，在网页端查看自己最近动态将导致消息非常多
1. BugN4040：授权排序规则不同导致终端访问API出现授权错误
1. BugN4042：终端配置显示样式为超链接的JSON类型作业组属性时值不保存
1. BugN4070：消息系统处理太快，有时获取序列失败，从而导致有些消息不会产生
1. BugN4072：JSON格式的通配符在WPS中不显示
1. BugN4113：报表数据量太大，导出文件失败
1. BugN4121：EOC中单个资产的趋势图显示要精确到秒
1. BugN4143：资产属性报表中资产的属性值为空时，窄表模式在主页上显示异常
1. BugN4158：EOC除项目甘特图页面和部分页面的跳转链接外，全屏模式下其余操作均不显示操作框
1. BugN4177：作业项终端显示样式为多行文本时，有换行就无法更新到作业组属性上去
1. BugN4182：JSON类型的作业项，勾选必须完成和不允许为空，在执行时不填写也能标记为完成
1. BugN4183：终端新样式已执行页面，手动删除已执行作业组后，计数气泡显示的数量不变
1. BugN4191：作业组属性报表自定义的字段不支持like查询，需要加%才可以
1. BugN4196：JSON数组类型的作业项值通过逻辑脚本更新到作业组属性中后，在终端上不显示
1. BugN4198：设备报警创建作业组修改作业组名称不正确
1. BugN4200：SQLServer数据库中作业组属性值有英文单引号时无法审核
1. BugN4295：数值类型的作业项配置了在终端上隐藏时，没有值也会触发<条件的逻辑行为

## 增加的功能详细说明

### PBIN3762：终端字符串和整形输入的地方支持语音转文本录入

* 语音识别功能主要目的是在现场环境下，通过识别工作人员语音以简化输入过程。现阶段，只实现数字和字符串类型输入项的语音转文本输入。手机端移动工作站应用采集语音，把语音转化为二进制数据流，通过WebSocket的连接方式发送给后台语音识别服务，后台服务把识别后的文本回传给移动工作站应用，移动工作站应用把识别文本自动录入到当前执行项的输入框中。

  <img alt=" " src={useBaseUrl('docimg/语音识别4201.png')} />
  <img alt=" " src={useBaseUrl('docimg/语音识别4202.gif')} />

:::tip 注意
此功能不会随着软件通用功能发布，会根据不同的项目定制打包。
:::tip 注意

### PBIN3876：打印页面支持自定义

* 终端打印功能增强，支持自定义打印的页面。此功能需要使用带打印机的终端。需要配置脚本和终端自定义页面。

  <img alt=" " src={useBaseUrl('docimg/dayin4101.png')} />

* 终端自定义页面html例子：

```
{
  "name": "print",
  "beforeShow": "",
  "beforeHide": "",
  "getContent": "function(_context,_cfg){console.log(1263333);var printData=_context.PrintData;var qrCodeText='';var htmls=[];htmls.push('<div style=\"font-size:13px;width: 100%;\">');htmls.push('    <ul style=\"list-style: none;padding:0;margin:0;line-height: 18px;\">');if(printData.BarCodeList&&printData.BarCodeList.length>0){htmls.push('        <li style=\"display:flex;justify-content: space-between;\">');htmls.push('            <div><span>'+printData.BarCodeList[0].Tag+': '+printData.BarCodeList[0].Value+'</span><br/>');htmls.push(' <svg class=\"barcode\" jsbarcode-format=\"CODE128\" jsbarcode-value=\"'+printData.BarCodeList[0].Value+'\" jsbarcode-displayValue=\"false\" jsbarcode-margin=\"0\" jsbarcode-height=\"20\" jsbarcode-width=\"1\"></svg></div>');htmls.push('            <span style=\"margin-top: 5px;font-family:serif;font-style:italic;font-size:30px;\">'+printData.Company+'</span>');htmls.push('        </li>');for(var i=1;i<printData.BarCodeList.length;i++){var _item=printData.BarCodeList[i];if(i%2==1){htmls.push('        <li style=\"display:flex;justify-content: flex-start;\">');var style=_item.Value==100?'width:90px':'width:155px';htmls.push('    <div style=\"'+style+'\">');htmls.push(' <span>'+_item.Tag+': '+_item.Value+'</span><br/>');htmls.push(' <svg class=\"barcode\" jsbarcode-format=\"CODE128\" jsbarcode-value=\"'+_item.Value+'\" jsbarcode-displayValue=\"false\" jsbarcode-margin=\"0\" jsbarcode-height=\"20\" jsbarcode-width=\"1\"></svg>');htmls.push('            </div>')}else{htmls.push(' <div>');htmls.push(' <span>'+_item.Tag+': '+_item.Value+'</span><br/>');htmls.push(' <svg class=\"barcode\" jsbarcode-format=\"CODE128\" jsbarcode-value=\"'+_item.Value+'\" jsbarcode-displayValue=\"false\" jsbarcode-margin=\"0\" jsbarcode-height=\"20\" jsbarcode-width=\"1\"></svg>');htmls.push(' </div>');if(i==printData.BarCodeList.length-1&&printData.QRCodeText){qrCodeText=printData.QRCodeText;htmls.push('        <div class=\"qrCodeImage\" id=\"qrcode\" style=\"margin-left:10px;\"></div>')}htmls.push(' </li>')}}}htmls.push('        <li style=\"display:flex;justify-content: space-between;\">');_.each(printData.PropertyList,function(_item,_index){var style=_index==0?'margin-right:5px;margin-top:5px;':'margin-top:5px;';htmls.push('            <span style=\"'+style+'\">'+_item.PropertyName+': '+_item.PropertyValue+'</span>')});if(printData.BorderValueList&&printData.BorderValueList.length>0){htmls.push('            <span>');_.each(printData.BorderValueList,function(_item,_index){htmls.push('                <span style=\"padding:2px 5px;border: 1px solid #000;margin-left:5px;font-size:15px;\">'+_item+'</span>')});htmls.push('            </span>')}htmls.push(' </li>');htmls.push('    </ul>');htmls.push('</div>');$('#home').html(htmls.join('')).css({'width':'310px','border':'none','height':'200px'});_context.JsBarcode('.barcode').init();if(qrCodeText){_context.MakeQRCodeFunc(qrCodeText,$('#qrcode'),39,39)}}"
}
```

* 作业项脚本例子：

```
var obj = {
    Company:'Mcube',
    BarCodeList:[{
        Value:'MC3416-P',
        Tag:'P/N'
    },{
        Value:'DFR461.04H',
        Tag:'Lot No'
    },{
        Value:'A100003259',
        Tag:'Tracking No.'
    },{
        Value:'2213',
        Tag:'Date Code'
    },{
        Value:'China',
        Tag:'COO'
    },{
        Value:'100',
        Tag:'Quantity'
    },{
        Value:'MC3416-P',
        Tag:'Customer Part No'
    }],
    PropertyList:[{
        'PropertyName':'Pack Date',
        'PropertyValue':'2022/07/22'
    },{
        'PropertyName':'Packer',
        'PropertyValue':'C0015'
    }],
    BorderValueList:['GP','HF'],
    Template:true,
    QRCodeText:'MC3416-P;DFR461.04H;2213;100;A100003259;China;MC3416-P',
    AutoPrint:true
}
Scan.StartPrint(JSON.stringify(obj));
return true;
```

* 效果图：

  <img alt=" " src={useBaseUrl('docimg/dayin4102.png')} />

### PBIN3881：项目每个活动完成时，显示项目属性，对于必填项要求填写才能完成

* 项目功能增强，在每个流程活动完成时，对话框中将显示项目的属性，其中必填项要求填写才可以完成。

  <img alt=" " src={useBaseUrl('docimg/xiangmu4201.png')} />

  <img alt=" " src={useBaseUrl('docimg/xiangmu4202.png')} />

### PBIN3883：内置自定义KPI支持作业、作业项和维度来源

* 内置自定义KPI进一步优化，增加了根据作业，作业项值统计，维度来源支持作业组属性。

* 首先，SDC中的配置如图：

  <img alt=" " src={useBaseUrl('docimg/kpi4207.png')} />

* 希望统计省市列表中值为北京的好评率、好评数量、非好评率、非好评数量

* 具体说明如下：

* 配置

  * “config.json”配置样例：

```json
//DimensionList是KPI中的维度列表，值必须为当前支持的维度名称
//当前支持‘时间’，‘组织单元’，‘人员’，‘例外等级’，‘资产’，‘作业组’，‘班次’，‘业务范畴’，‘资产类别’ 
{
  "DimensionList": [    
    { 
      "DimensionName": "时间"
    },
    {
      "DimensionName": "组织单元"
    },
    {
      "DimensionName": "人员"
    },
    {
      "DimensionName": "例外等级"
    },
    {
      "DimensionName": "作业组"
    },
    {
      "DimensionName": "班次"
    },
    {
      "DimensionName": "业务范畴"
    },
    {
      "DimensionName": "资产",
	  "From":{ //这里指定了此维度值的来源，type为1、Name为资产表示来源是名为“资产”的作业组属性值
             //注意，该作业组属性的值必须是资产的ID
		"Type":1,
		"Name":"资产"
	  }
    },
    {
      "DimensionName": "资产类别",
	  "From":{ //这里指定了此维度值的来源，type为1、Name为资产类别表示来源是名为“资产类别”的作业组属性值
             //注意，该作业组属性的值必须是资产类别的ID
		"Type":1,
		"Name":"资产类别"
	  }
    }
  ],
  //ChildKPIList是子KPI列表，类型为数组
      //以第一个北京项为例，ChildKPIName表示自定义了一个子KPI列表项为北京
      //ColName为TaskSF表示抽取的是数据库里这个字段的值
      //Type为1表示统计方式是计数
      //IsCondition为true表示是条件
      //Operator为=表示条件为=
      //Condition表示当前元素的条件，在此配置文件中值为ID，这个ID来自省市列表中“北京”的ID
  "ChildKPIList": [
  {
      "ChildKPIID": "BJ",
      "ChildKPIName": "北京", 
	  "CalculateType":0,
	  "Unit":"个",
	  "Numerator":{
		  "ColName":"TaskSF",
		  "Type":1,
		  "IsCondition":true,
		  "Operator":"=",
		  "Condition":"cef6aa30-6e72-4fdd-a4ab-09a3a473eefd"
	  }
  },
  {
      "ChildKPIID": "BJRate",
      "ChildKPIName": "北京率",
	  "CalculateType":1,
	  "Unit":"%",
	  "Numerator":{
		  "ColName":"TaskSF",
		  "Type":1,
		  "IsCondition":true,
		  "Operator":"=",
		  "Condition":"cef6aa30-6e72-4fdd-a4ab-09a3a473eefd"
	  },
	  "Denominator":{
		"ColName":"TaskSF",
		"Type":1
	  }
    },
    {
      "ChildKPIID": "Number",
      "ChildKPIName": "数量",
	  "CalculateType":0,
	  "Unit":"个",
	  "Numerator":{
	  "ColName":"Number"
	  }
    },
    {
      "ChildKPIID": "Good",
      "ChildKPIName": "好评",
	  "CalculateType":0,
	  "Unit":"条",
	  "Numerator":{
	  "ColName":"Good",
	  "Type":1,
	  "IsCondition":true,
	  "Operator":"=",
	  "Condition":"09a5fa8b-52ee-4c6e-b3cc-29135d38dc8c"
	  }
    },
	{
      "ChildKPIID": "Bad",
      "ChildKPIName": "非好评",
	  "CalculateType":0,
	  "Unit":"条",
	  "Numerator":{
	  "ColName":"Good",
	  "Type":1,
	  "IsCondition":true,
	  "Operator":"<>",
	  "Condition":"09a5fa8b-52ee-4c6e-b3cc-29135d38dc8c"
	  }
    },
	 {
      "ChildKPIID": "GoodRate",
      "ChildKPIName": "好评率",
	  "CalculateType":1,
	  "Unit":"%",
	  "Numerator":{
		  "ColName":"Good",
		  "Type":1,
		  "IsCondition":true,
		  "Operator":"=",
		  "Condition":"09a5fa8b-52ee-4c6e-b3cc-29135d38dc8c"
	  },
	  "Denominator":{
		"ColName":"Good",
		"Type":1
	  }
    },
	 {
      "ChildKPIID": "BadRate",
      "ChildKPIName": "非好评率",
	  "CalculateType":1,
	  "Unit":"%",
	  "Numerator":{
		  "ColName":"Good",
		  "Type":1,
		  "IsCondition":true,
		  "Operator":"<>",
		  "Condition":"09a5fa8b-52ee-4c6e-b3cc-29135d38dc8c"
	  },
	  "Denominator":{
		"ColName":"Good",
		"Type":1
	  }
    }
  ],
  //EtlDatas，抽取数据，类型为数组
  "EtlDatas": [
  {
      "Type": 0, //这里type为0表示来自作业项值或作业状态
      "ID": "",  //这里有ID和Name,表示作业项或者作业状态支持ID或者名称
      "Name": "省份", //优先根据ID抽取，没有同名作业或作业项则可以不写ID只写Name
      "ColName": "TaskSF", //抽取的数据在数据库中的字段名称
      "DataType": 1 //抽取的数据在数据库中的类型
                    //0:未知,Guid=1,String=2,Int=3,TinyInt=31
                    //SmallInt=32,BigInt=33,Double=35,DateTime=4,Bool（bit）=5
    },
    {
      "Type": 1, //这里type为1表示来自作业组属性
      "Name": "数量", //作业组属性只支持名称
      "ColName": "Number",
      "DataType": 3
    },
    {
      "Type": 1,
      "Name": "好评",
      "ColName": "Good",
      "DataType": 1
    }
  ],
  "TableName": "TestNew_new", //数据库中表的名称，自动创建
  "TableVersion": 1, //表的版本号，当同一数据表版本号不同时，会重新创建表不兼容旧数据
  "CustomType": 1, //自定义KPI的类型，这里为1表示是内部扩展kpi
  "ExtractTime": 1, //抽取时间，这里为1表示作业组执行完之后
  "NeedExtractTaskGroupIDs": "0a2affb6-3d07-4d19-9577-00d8969d451c"
} //需要抽取的作业组模板ID列表，多个之间用','分割
```

* 完整配置说明：

**DimensionList 维度 数组**

* 自定义kpi的维度，当前支持 ‘时间’，‘组织单元’，‘人员’，‘例外等级’，‘资产’，‘作业组’，‘班次’，‘业务范畴’，‘资产类别’；

* DimensionName 值必须为当前支持的维度名称

* From 维度值来源，缺失值为默认来源

  * Type 维度来源类型，1为作业组属性 缺省值0 默认值

  * Name 维度来源名称，当前为作业组属性名 Type为0时不起作用

* 维度支持默认来源（作业组相关信息），作业组属性

**ChildKPIList 子KPI 数组**

* ChildKPIID    子KPIID 在同一个配置中为唯一字符串（英文字符串）

* ChildKPIName  子KPI名称

* CalculateType 子KPI的计算方式，枚举类型；1求和，1求百分率（结果会*100），2求比

* Unit  单位

* Numerator 分子；如果求和类型则为值，如果为百分率或求比则为分子

  * ColName 当前元素在数据库中字段名

  * Type 统计方式 枚举类型 0求和，1计数

  * IsCondition 是否为条件 bool类型 true则会使用条件查询，false则统计所有

  * Operator 条件符号 字符串 支持``` =，<>，>，>=，<，<=```

  * Condition 当前元素的条件 字符串

* Denominator 分母；求和类型为空，求百分率或求比为分母 内部元素与Numerator相同

**EtlDatas 抽取数据 数组**

* Type 数据抽取的来源类型 枚举类型 0作业项值或作业状态，1作业组属性

* Name 数据来源名称或者ID 字符串 作业组属性只支持名称，作业项或者作业状态支持ID或者名称（同一个作业组中相同的则随机取值，尽量避免抽取数据在作业组重名或引用相同的作业规范）

* ColName 抽取的数据在数据库中的字段名称

* DataType 抽取的数据在数据库中的类型 枚举类型 0:未知,Guid=1,String=2,Int=3,TinyInt=31,SmallInt=32,BigInt=33,Double=35,DateTime=4,Bool（bit）=5

**其他配置**

* TableName 数据库表名称 字符串
* TableVersion 表版本号 正整数 注：当同一个数据表的版本号不同时，会重新创建表不兼容旧数据
* CustomType 自定义KPI的类型 枚举类型 0独立部署 缺省值 ，1内部扩展kpi
* ExtractTime 抽取时间 枚举类型 0 不抽取，1作业组执行完后
* NeedExtractTaskGroupIDs 需要抽取的作业组模板ID列表 字符串 多个则使用','分割

* 在系统扩展管理中添加自定义KPI

  <img alt=" " src={useBaseUrl('docimg/kpi4210.png')} />

* 单维度效果图

  <img alt=" " src={useBaseUrl('docimg/kpi4208.png')} />

* 双维度效果图

  <img alt=" " src={useBaseUrl('docimg/kpi4209.png')} />

### PBIN3903：终端和Web端内置库操作自定义属性支持各种配置

* 内置库操作功能优化，终端和Web端内置库操作自定义属性支持各种配置，显示也与SDC中配置类型显示一致。

  <img alt=" " src={useBaseUrl('docimg/kucaozuo4201.png')} />

  <img alt=" " src={useBaseUrl('docimg/kucaozuo4202.png')} />

  <img alt=" " src={useBaseUrl('docimg/kucaozuo4203.png')} />

### PBIN3913：作业组Word和Excel视图支持显示列表的全部项

* 作业树模板显示功能增强，增加了listvalue通配符，支持就地显示列表的所有列表项。Word视图中显示列表的全部项，列表值之间用空格分隔，选择项值的前方带有已勾选的框。

* 举例下图中作业组属性"无凝露"的数据类型为列表，在之前的版本中，如果希望在Word中显示，那么word模板通配符是写为$im.tg.a.无凝露.value.e$，生成的word视图也只显示选择了的内容

  <img alt=" " src={useBaseUrl('docimg/tongpeifu4201.png')} />

* 而在新版本中，如果希望将列表的全部项都显示出来，并且对于选择和未选择的项有明显区分，那么将value写为listvalue即可，如$im.tg.a.无凝露.listvalue.e$。效果如图：

  <img alt=" " src={useBaseUrl('docimg/tongpeifu4202.png')} />

### PBIN3932：终端旧样式主页和新样式执行列表页扫描后，如果选中未接受的作业组，跳转到当前作业组并选中

* 终端扫描功能优化，在旧样式主页和新样式执行列表页扫描后，如果选中未接受的作业组，也可以跳转到当前作业组并选中。

  <img alt=" " src={useBaseUrl('docimg/saomiao4201.png')} />

  <img alt=" " src={useBaseUrl('docimg/saomiao4202.png')} />

### PBIN4004：项目甘特图上显示实际开始时间和预计结束时间标记

* 项目中甘特图显示优化，新增加了实际开始时间和预计结束时间的标记。实际开始时间为子项或执行项中最早的开始时间，预计结束时间为子项或执行项中最晚的结束时间。

  <img alt=" " src={useBaseUrl('docimg/甘特图4201.png')} />

### PBIN4011：资产总览Tab页支持扩展

* EOC端资产总览功能增强，Tab页支持扩展，显示该资产的更多数据信息。

  <img alt=" " src={useBaseUrl('docimg/资产总览4201.png')} />

* 配置上，在系统扩展管理-扩展类型中新增了资产总览自定义Tab页，选择后，可以指定哪些资产或资产类别的资产总览页面中显示此扩展Tab，如不选择则默认所有资产总览中都显示。然后选择数据源，比如资产属性报表，那么点进资产总览页面，就能看到多了个资产属性报表的Tab页，并且只显示该资产的相关数据。

  <img alt=" " src={useBaseUrl('docimg/资产总览4202.png')} />

  <img alt=" " src={useBaseUrl('docimg/资产总览4203.png')} />

  <img alt=" " src={useBaseUrl('docimg/资产总览4204.png')} />

  <img alt=" " src={useBaseUrl('docimg/资产总览4205.png')} />

### PBIN4025：作业项（历史）报表支持没有选择项

* 作业项（历史）报表功能优化，支持没有选择项，可以直接勾选不同作业组、作业下的作业项进行筛选。

  <img alt=" " src={useBaseUrl('docimg/EOC4206.png')} />

### PBIN4088：库存功能完善

* 库存功能增强，首先，存储区域表增加了树形视图，可以更好的获知存储区域间的层级关系。

  <img alt=" " src={useBaseUrl('docimg/库存4201.png')} />

* 存储区域可以设置为虚拟区域，虚拟区域中不能存放任何物料，方便将一些特殊情况的存储区域分类，还可以避免将物料误操作进本库。同时还增加可被查看的组织单元（多个）和可被操作的组织单元（多个）的设置，也可选择继承父存储区域。可被查看可被操作的设置，需要SDC的设置中勾选了只能查看自己包含的组织单元的数据。

  <img alt=" " src={useBaseUrl('docimg/库存4202.png')} />

* 配置完后，相应组织单元的人对于该存储区域表以及相关的物料、库存，其查看或操作的权限都根据配置来决定了。如图，该用户即使是存储区域管理员，也不会看到所有存储区域，并且由于所属组织单元对于选中的存储区域只有查看权限，所以编辑按钮还是为灰色不可点击状态。

  <img alt=" " src={useBaseUrl('docimg/库存4203.png')} />

* 物料表、库存表中也是一样的只能操作和查看符合设置的数据

  <img alt=" " src={useBaseUrl('docimg/库存4204.png')} />

* 优化作业组属性和作业项通过直接配置的方式实现库操作，从而满足更多的自定义。增加了流程后函数OperatingInventoryByJsonProperty，能够以数组的形式实现库操作。详细的配置及使用请查看[流程自定义函数](/内置函数/流程自定义函数.md)中该函数的说明。下图为一个配置实例

  <img alt=" " src={useBaseUrl('docimg/库存4205.png')} />

### PBIN4120：对象资质过期天数可发布Mqtt消息

* 对象资质的过期天数，可以发布Mqtt消息。当希望实时了解某个对象资质的过期天数，以及希望在即将过期时利用资产外部属性的逻辑触发创建作业或发布消息的行为时，可以使用此配置来解决。

* 消息体为：

```
{"ID":"6a6f17de-69ce-4c83-b711-f9e3add43c07","No":"20221226","QID_OID":"801dffb9-b186-4d34-88b4-558abae64c77_711621f7-9cfc-491f-b98d-90aab392ebf4","QNo_ONo":"R0001_王明","QName_OName":"电工证_王明","ValidDay":5}
```

* 首先，在SDC中新建一个mqtt数据源，其中MessageKey可以删除多余的格式数据，只保留图中两个即可

  <img alt=" " src={useBaseUrl('docimg/对象资质mqtt4201.png')} />

* 之后新建一个资产类别为此mqtt数据源的资产，然后修改资产属性值。其中，ClientName自定义，Topic必须为ObjectQualificationValidDayMsg，MessageKey的值分别为“No”和“ValidDay”，No就是对象资质的编号，ValidDay就是天数。

  <img alt=" " src={useBaseUrl('docimg/对象资质mqtt4202.png')} />

* 举例这里希望王明的电工证资质过期天数小于5时能够实时有消息发送。

  <img alt=" " src={useBaseUrl('docimg/对象资质mqtt4203.png')} />

* 那么就可以在SDC里为某个资产新建一个外部属性，并为之配置发送消息的逻辑。其外部属性标签为mqtt数据源资产名.No，例子中数据源资产名为MQTTSub-ObjectQualificationValidDayMsg，No也就是编号为20221226，所以标签为MQTTSub-ObjectQualificationValidDayMsg.20221226。逻辑配置为＜5触发行为发送消息。

  <img alt=" " src={useBaseUrl('docimg/对象资质mqtt4204.png')} />

* 配置完毕后，当王明的电工证有效日期小于5天时，就会触发资产属性逻辑，发送消息了。同时也可以通过资产总览和资产属性报表实时看到过期天数了。

  <img alt=" " src={useBaseUrl('docimg/对象资质mqtt4205.png')} />

  <img alt=" " src={useBaseUrl('docimg/对象资质mqtt4206.png')} />

### PBIN4125：增加发布Mqtt消息的接口和流程后内置函数

* 增加发布Mqtt消息的接口和流程后内置函数,可以让作业组属性通过mqtt改变资产外部属性值触发报警逻辑，实现通知和产生作业组。详细说明请查看[流程后内置函数扩展例子](系统扩展指南/流程后内置函数扩展例子.md)。

### PBIN4145：终端和网页端部分细节完善

* 网页端作业组报表增加归档状态列，同时可以按照此条件筛选

  <img alt=" " src={useBaseUrl('docimg/EOC4201.png')} />

* 网页端修改主页支持权限控制

  <img alt=" " src={useBaseUrl('docimg/EOC4202.png')} />

* 网页端和手机端作业树对于作业是否完成有明显图标区分，EOC计划创建的作业组，作业状态为要求作业的，其下的作业项全部完成会有绿标显示

  <img alt=" " src={useBaseUrl('docimg/EOC4208.png')} />

* 网页端在大部分页面增加返回按钮，缺省都是显示，但可以在XML中配置为不显示

  <img alt=" " src={useBaseUrl('docimg/EOC4203.png')} />

* 终端将拍照界面的确认按钮从右上角改到低部，右上角容易误触

  <img alt=" " src={useBaseUrl('docimg/EOC4204.png')} />

* 网页端知识库支持多关键字查询，且支持动态创建条件。多关键字之间用"&"、"|"或空格隔开。要注意如PG-33069、PG33069，视为一个字，不能只搜一部分，作为条件搜索时需要完整输入，如希望只输入PG或33069可以搜索，则在两者之间加个空格即可。

  <img alt=" " src={useBaseUrl('docimg/EOC4205.png')} />

* 终端增加知识库的入口和打开知识库的脚本函数

  <img alt=" " src={useBaseUrl('docimg/终端4201.png')} />

  * 将作业项值作为筛选条件跳转至知识库的配置如下：

    <img alt=" " src={useBaseUrl('docimg/终端4202.png')} />
  
  * 效果如下：

    <img alt=" " src={useBaseUrl('docimg/终端4203.png')} />

```js
var value = @Me.Value ;
if(value){
    value = value.replace(/,/g, '&');
}
Common.JumpToEocKnowledgeBaseWithCondition(value,'查询知识库');
return true;
```

* 终端增加带动态参数打开报表的脚本函数
  * 在终端作业项里可以跳转到EOC固定报表查询并将字符串作为条件带入查询，如字符串为“设备名称:PG-33070,故障现象:空管警报”，希望将此字符串作为查询条件跳转至某个报表，则可以按照下面的步骤进行配置。
  
  * EOC上的报表先另存为查询，终端作业项中添加逻辑脚本

    <img alt=" " src={useBaseUrl('docimg/终端4205.png')} />

    <img alt=" " src={useBaseUrl('docimg/终端4204.png')} />

  * 终端执行完跳转后的效果  

    <img alt=" " src={useBaseUrl('docimg/终端4206.png')} />

    <img alt=" " src={useBaseUrl('docimg/终端4207.png')} />

```js
var curTaskItemValue = @Me.Value ;  // 作业项的值
var reportID = '0ee8990a-9859-4895-ad10-4ff1b79c45bb';   // 报表的ID
alert(1);
Common.JumpToEocReportWithCondition(reportID,curTaskItemValue ,'CustomReport','Index','查询页面显示的名字',false,false,false,false);
return true;
```

* 网页端筛选树保持用户上一次展开状态

  * 网页端带筛选树的界面，会在下一次点开时自动显示为上一次展开的状态

    <img alt=" " src={useBaseUrl('docimg/EOC4207.png')} />

### PBIN4148：手机端相机扫描支持打开闪光灯

* 终端使用相机时新增了打开闪光灯按钮

  <img alt=" " src={useBaseUrl('docimg/终端4209.png')} />

### PBIN4154：手机端拍照支持增加水印（安卓版本）

* 终端支持增加水印，首先需要在SDC设置里将希望添加上的水印勾选上，logo水印需要先上传附件，然后填写上附件名

  <img alt=" " src={useBaseUrl('docimg/终端4210.png')} />

* 配置完后在终端上逻辑拍照、添加日志等，就会自动增加上相应的水印了

  <img alt=" " src={useBaseUrl('docimg/终端4211.png')} />

### PBIN4179：支持把用户设置为超级管理员

* 在SDC用户属性栏中，新增了一项超级管理员，当解决方案勾选了启用安全并使用超级管理员(Administrator)登录打开后，可以选择用户设置超级管理员，设置完后该用户登录EOC，权限与Administrator一样。

  <img alt=" " src={useBaseUrl('docimg/用户4201.png')} />

  <img alt=" " src={useBaseUrl('docimg/用户4202.png')} />

### PBIN4184：终端待执行和执行中也可以按时间、分组名排序

* 优化了终端待执行和执行中页面排序功能，可以按照时间、分组名来进行排序。

  <img alt=" " src={useBaseUrl('docimg/终端4212.png')} />

### PBIN4199：资产内部属性支持报警和逻辑

* 资产属性功能增强，内部属性也支持报警配置及报警后的逻辑。

  <img alt=" " src={useBaseUrl('docimg/内部报警4201.png')} />

### PBIN4252：imFigure功能增强

* imFigure功能增强，首先是优化了大屏的配置和使用，原本的模式请查看[大屏配置和使用](/附录/大屏配置和使用.md)，在新版本中不需要如此配置，只需要在EOC的扩展页面中直接进行设置即可。

* 安装软件后使用部署工具部署企业运营中心时，增加了包含imFigure的部署，勾选后进行部署，iis目录下就会新建上此应用

  <img alt=" " src={useBaseUrl('docimg/imFigure4201.png')} />

  <img alt=" " src={useBaseUrl('docimg/imFigure4202.png')} />

* 使用超级管理员或有超级管理员权限的用户登录EOC，在系统扩展管理中，内置扩展里，选择imFigure，添加。然后在自定义导航里把此功能添加到指定的位置即可。

  <img alt=" " src={useBaseUrl('docimg/imFigure4203.png')} />

* 进入imFigure，点击新建，可以选择新建项目大屏或大屏盒子，其中大屏盒子的配置如图所示。名称自定义，编号为安装imFigure的apk后登录页显示的设备编号。

  <img alt=" " src={useBaseUrl('docimg/大屏4201.png')} />

* 可以选择左侧导航的数据来源，分别为画面（对应EOC中的画面监控功能）、大屏（对应此配置页面中的项目大屏）、面板（对应EOC的主页面板），可以自定义导航显示的名称和图标，支持增加多个导航并支持不同类型的组合。
* 同时，可以设置在imFigure中导航的自定义名称和图标是否显示，宽度，数据更新以及页面切换的间隔。在最下方有发布选项，如果选择发布，将消耗授权（即授权信息中的imFigure终端授权）。

  <img alt=" " src={useBaseUrl('docimg/大屏4202.png')} />

* 点击新建项目大屏，可以到配置大屏页面自定义组合配置，同时在大屏模板中提供了几个例子，可以选择一个模板，点击克隆，然后进入到编辑页，就可以根据此模板去配置项目大屏了。编辑页面由组件、图层、工作空间和详情设置四大板块组成。
* 组件中包含了所有已完成开发可供使用的小组件，图层里列出了所有已在工作空间里使用中的组件，而大部分编辑都在工作空间和页面设置中完成，其中页面设置为整个页面的设置，另外左上角的按钮可以隐藏/显示几大板块。编辑过程中也可以随时预览。

  <img alt=" " src={useBaseUrl('docimg/大屏4203.png')} />

* 当选择某一组件时，页面设置会变更为详情设置，这时就是对该组件进行设置。定制中可以对组件进行定制化配置，动画中可以选择该组件展示时的动画效果，数据中分为静态数据和动态数据，静态数据可根据例子格式写好展示的数据，动态数据则需要通过填写接口url来获取。如果使用了动态时间筛选组件，希望将其与某个组件的数据关联起来，那么在编辑该组件的动态数据时，选择好对应的动态时间筛选组件即可。动态数据分为普通请求和SQL请求，其中SQL请求不支持get，如有get请求的数据，请使用普通请求。

  <img alt=" " src={useBaseUrl('docimg/大屏4204.png')} />

  <img alt=" " src={useBaseUrl('docimg/大屏4205.png')} />

* 以在单折线渐变图组件中获取活动中作业组数据展示为例。

  <img alt=" " src={useBaseUrl('docimg/大屏4216.png')} />

* 首先要在请求方式中选择动态请求。获取本地数据的情况下，可以忽略全局配置。在下面的请求地址中根据8010中的接口描述输入请求方式和url。

  <img alt=" " src={useBaseUrl('docimg/大屏4207.png')} />

* 这里isHistory=false表示想获取活动中作业组的数据，如果=true表示想获取归档作业组的数据，=空则表示全部数据。

  <img alt=" " src={useBaseUrl('docimg/大屏4208.png')} />

* 要看一下EOC中获取指定的活动中作业组是怎样一个数据的返回，先为所有的活动中作业组添加上查询条件

  <img alt=" " src={useBaseUrl('docimg/大屏4209.png')} />

* 浏览器打开F12，MoreCondition中的内容就是添加的查询条件。将其复制出来，格式化一下json数据.

  <img alt=" " src={useBaseUrl('docimg/大屏4210.png')} />

  <img alt=" " src={useBaseUrl('docimg/大屏4211.png')} />

* Sign的值不能直接写，在8010中有提供如何替换。

  <img alt=" " src={useBaseUrl('docimg/大屏4212.png')} />

* 只需要SubqueryList中的内容，所以这里json也就写为

```
{
            "ColumnName": "TaskGroupName",
            "Sign": "2",
            "Value": "测试作业组"
        },
        {
            "ColumnName": "CreateTime",
            "Sign": "3",
            "Value": "2019-01-01"
        },
        {
            "ColumnName": "CreateTime",
            "Sign": "6",
            "Value": "2023-05-01"
        }
```

* 整个body内容如下，其中的queryParams部分和queryRule照着8010的帮助中写即可

  <img alt=" " src={useBaseUrl('docimg/大屏4222.png')} />

```
{
    "queryParams": [
        {
            "ColumnName": "UserJobType",
            "Sign": "1",
            "Value": 2
        },
        {
            "ColumnName": "TaskGroupName",
            "Sign": "2",
            "Value": "测试作业组"
        },
        {
            "ColumnName": "CreateTime",
            "Sign": "3",
            "Value": "2019-01-01"
        },
        {
            "ColumnName": "CreateTime",
            "Sign": "6",
            "Value": "2023-05-01"
        }
    ],
    "queryRule": {
        "MaxRecordCount": 5000,
        "IsSimple": false,
        "UserJobType": 2
    }
}
```

 <img alt=" " src={useBaseUrl('docimg/大屏4221.png')} />

* 如果有时间筛选组件，希望与之关联起来，则需要这么写

  <img alt=" " src={useBaseUrl('docimg/大屏4213.png')} />

```
{
    "queryParams": [
        {
            "ColumnName": "UserJobType",
            "Sign": "1",
            "Value": 2
        },
        {
            "ColumnName": "TaskGroupName",
            "Sign": "2",
            "Value": "测试作业组"
        },
        {
            "ColumnName": "CreateTime",
            "Sign": "3",
            "Value": "$StartDate"  //表示大于时间筛选框中选择的开始时间
        },
        {
            "ColumnName": "CreateTime",
            "Sign": "6",
            "Value": "$EndDate"  //表示小于等于时间筛选框中选择的结束时间
        }
    ],
    "queryRule": {
        "MaxRecordCount": 5000,
        "IsSimple": false,
        "UserJobType": 2
    }
}
```

* 最后，还需要把接口返回的数据进行过滤器函数编辑

 <img alt=" " src={useBaseUrl('docimg/大屏4214.png')} />

```
var data = {
  "dimensions": [
    "product",
    "data1"
  ],
  "source": []
}

if(res && res.IsOk && res.Response && res.Response.Rows && res.Response.Rows.length > 0){
  for(var i=0;i<res.Response.Rows.length;i++){
    var obj = res.Response.Rows[i];
    data.source.push({
      "product": obj['Cells'][14],
      "data1": obj['Cells'][20]
    })
  }
}

return data
```

* 最终才能将数据显示在组件上，这里显示的效果表示在所有作业组名称不等于“测试作业组”，开始时间大于时间筛选框中的开始时间，结束时间小于时间筛选框中的结束时间的活动中作业组的执行完成百分比的单折线渐变图。

 <img alt=" " src={useBaseUrl('docimg/大屏4215.png')} />

* 在编辑完成后，注意要先点击保存再回到主页。

  <img alt=" " src={useBaseUrl('docimg/大屏4206.png')} />

* 如果希望将一个项目上已经配置好的大屏导入另一个项目中编辑和使用，可以先点击下载，然后在另一个项目中新建项目大屏，在编辑页面中点击导入，选择此json文件，就可以了。

  <img alt=" " src={useBaseUrl('docimg/大屏4217.png')} />

  <img alt=" " src={useBaseUrl('docimg/大屏4218.png')} />

  <img alt=" " src={useBaseUrl('docimg/大屏4219.png')} />

  <img alt=" " src={useBaseUrl('docimg/大屏4220.png')} />

* 效果图（在左侧边缘处点击可以让导航栏显示或隐藏，在右上角处点击可以让播放器显示或隐藏）

  <img alt=" " src={useBaseUrl('docimg/大屏4201.gif')} />

### PBIN4257：KPI增加列表维度，以方便自定义KPI使用

* KPI功能增加了自定义列表维度，用以方便自定义KPI使用。

  <img alt=" " src={useBaseUrl('docimg/kpi4201.png')} />

* 在配置上，只需要在维度DimensionList中增加自定义列表，和在抽取数据EtlDatas中增加IsResponseItem即可。注意：因为抽取数据为数组类型，当中如果配置了多组，只有第一组中的IsResponseItem配置有效。

  <img alt=" " src={useBaseUrl('docimg/kpi4202.png')} />

  <img alt=" " src={useBaseUrl('docimg/kpi4203.png')} />

* 配置例子

  <img alt=" " src={useBaseUrl('docimg/kpi4204.png')} />

  <img alt=" " src={useBaseUrl('docimg/kpi4206.png')} />

```
{
  "DimensionList": [
    {
      "DimensionName": "时间"
    },
    {
      "DimensionName": "组织单元"
    },
    {
      "DimensionName": "人员"
    },
    {
      "DimensionName": "作业组"
    },
    {
      "DimensionName": "班次"
    },
    {
      "DimensionName": "自定义列表"
    }
  ],
  "ChildKPIList": [
    {
      "ChildKPIID": "Number",
      "ChildKPIName": "总数",
	  "CalculateType":0,
	  "Unit":"个",
	  "Numerator":{
	  "ColName":"Number"
	  }
    },
	 {
      "ChildKPIID": "GoodRate",
      "ChildKPIName": "完成率",
	  "CalculateType":1,
	  "Unit":"%",
	  "Numerator":{
		  "ColName":"Done",
		  "Type":1,
		  "IsCondition":true,
		  "Operator":"=",
		  "Condition":"4298ab91-c477-4c15-850d-51e31de58707"
	  },
	  "Denominator":{
		"ColName":"Done",
		"Type":1
	  }
    }
  ],
  "EtlDatas": [
    {
      "Type": 1,
      "ID": "",
      "Name": "数量",
      "ColName": "Number",
      "DataType": 3
    },
    {
      "Type": 1,
      "ID": "",
      "Name": "完成",
      "ColName": "Done",
	  "IsResponseItem":true,
      "DataType": 1
    }
  ],
  "TableName": "TestNew_new",
  "TableVersion": 1,
  "CustomType": 1,
  "ExtractTime": 1,
  "NeedExtractTaskGroupIDs": "f686edd8-dc82-4bf7-956c-da1ae9a1140e"
}
```

* 效果图

  <img alt=" " src={useBaseUrl('docimg/kpi4205.png')} />

### PBIN4267：Restful API增加接口和支持Swagger

* Restful API增加接口并且支持Swagger

  <img alt=" " src={useBaseUrl('docimg/api4202.png')} />

  <img alt=" " src={useBaseUrl('docimg/api4201.png')} />

### PBIN4269：统一的Web配置和管理中心

* 将SDC和SMC的配置功能Web化，目前已经实现了SDC中的部分配置。

* 安装软件后使用部署工具部署企业运营中心时，增加了包含Web配置的部署，勾选后进行部署，iis目录下就会新建上此应用

  <img alt=" " src={useBaseUrl('docimg/web配置4201.png')} />

* 使用超级管理员或有超级管理员权限的用户登录EOC，在系统扩展管理中，内置扩展里，选择配置与管理中心，添加。然后在自定义导航里把此功能添加到指定的位置即可。

  <img alt=" " src={useBaseUrl('docimg/web配置4203.png')} />

* 左侧为缺省菜单栏，当前版本中分别为组织架构、资产管理、列表管理、系统

  <img alt=" " src={useBaseUrl('docimg/web配置4202.png')} />

### PBIN4303：改进终端在线时消息推送方式

* 终端推送增加通过WebSocket与后台进行长连接，类似的Web端的消息推送，但这个必须保证App在内存中且已登录。

### PBIN4317：授权增加对软件版本的控制

* SMC的授权当中增加了对软件版本的控制，授权文件只对符合的版本有效。

  <img alt=" " src={useBaseUrl('docimg/授权4201.png')} />

### PBIN4320：外部数据源服务初始化时自动注册需要的OPC组件

* 如果要使用OPCDA数据源，是需要手动注册opcdaauto.dll的。现在软件系统会判断是否存在，若没有将会自动进行注册。

### PBIN4356：作业组模板支持只能单次计划的设置

* 在SDC中作业组模板的属性栏中，新增了只能单次计划的业务规则

  <img alt=" " src={useBaseUrl('docimg/单次计划4201.png')} />

* 勾选上之后，该作业组模板在EOC计划页面只能进行单次计划，没有重复模式

  <img alt=" " src={useBaseUrl('docimg/单次计划4202.png')} />

### PBIN4397：KPI增加作业组完成率和支持导出为图片

* KPI分析页面功能增强，在作业组完成率视图中增加了量化指标"作业组完成率"，结果为作业组延时完成率和按时完成率的和

  <img alt=" " src={useBaseUrl('docimg/kpi完成率4201.png')} />

* 同时，导出中除了原有的导出为excel外，新增了整体导出为图片选项

  <img alt=" " src={useBaseUrl('docimg/kpi导出4201.png')} />

* 选择后会将当前页面的图形表格以图片格式导出

  <img alt=" " src={useBaseUrl('docimg/kpi导出4202.png')} />

### PBIN4423：EOC报表导出支持列为图片文件类型

* EOC报表的下载功能增强，报表中值为图片文件类型时，导出报表中直接显示图片。

 <img alt=" " src={useBaseUrl('docimg/报表图片4201.png')} />